# cloud-function-saas

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  FEATURE_ROADMAP.md  OPEN_SOURCE_GUIDE.md  PROJECT_STRUCTURE.md  README.md  README_OPEN_SOURCE.md  TERRAFORM_GUIDE.md  TERRAFORM_IMPLEMENTATION_SUMMARY.md  cloud_run_deployer.py  code_generator.py  container_builder.py  docker-compose.yml  multi_agent_generator.py  prototype.py  pyproject.toml  requirements.txt  spec_parser.py  terraform_code_generator.py  terraform_deployer.py  terraform_integration_architecture.md  terraform_prototype.py  terraform_state_manager.py  terraform_validator.py  test_multi_agent.py  test_terraform_integration.py  ui.py  utils.py
.github/workflows/: ci.yml  ci.yml.disabled
docs/: README.md  contributing.md  goals.md  multi-agent-system.md  specifications.md  troubleshooting.md
docs/deprecated/: docker.md
examples/: README.md  auth-service-go.spec.md  multi-cloud-example.spec.md  simple-terraform-example.spec.md  user-api-nodejs.spec.md
examples/simple/: auth-service.spec.md  webhook-handler.spec.md
legacy/: README.md  prototype.py
legacy/examples/simple/: data-processor.spec.md  user-api.spec.md
specs/: template.md
specs/examples/: 01-hello-world.md  02-todo-list.md  03-email-sender.md  04-webhook-receiver.md  05-key-value-store.md  06-auth-basic.md  07-url-shortener.md  08-file-upload.md  README.md  data-processor-python.spec.md  example-spec.md  simple-spec.md  test_spec.md  webhook-handler-nodejs.spec.md
specs/examples/basic-user-api/: user-api.md
src/: cli.py
src/core/: generator.py
src/providers/: gcp.py
src/utils/: security.py
terraform/modules/aws-serverless/: main.tf  outputs.tf  variables.tf
terraform/modules/gcp-serverless/: main.tf  outputs.tf  variables.tf
terraform/modules/shared/: main.tf  outputs.tf  variables.tf
tests/: test_parser.py
unused/: README.md
unused/future/: CONTRIBUTING.md  goals.md
unused/specs/: .gitkeep
unused/src/core/: parser.py
unused/src/providers/: base.py
